--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,19 @@
   --btn-shadow: 0 1px 4px rgb(26 26 67 / 10%);
 }
 
+@font-face {
+  font-family: Cooper Lt BT;
+  src: url(/fonts/CooperBoldBT.ttf);
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Domine;
+  src: url(/fonts/Domine-Regular.ttf);
+  font-weight: normal;
+  font-display: swap;
+}
+
 html,
 body {
   padding: 0;
@@ -17,16 +30,17 @@ body {
     Helvetica Neue, sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-.el {
-  color: var(--primary-color);
-  font-size: 48px;
+.mainContainer {
+  border: 1px solid red;
+  max-width: 1200px;
+  margin: 0 auto;
 }
