--- a/styles/StartAcademy.module.css
+++ b/styles/StartAcademy.module.css
@@ -5,7 +5,7 @@
 
 .buttonRow {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   margin-right: 20%;
 }
 
@@ -23,7 +23,8 @@
   letter-spacing: 1.6px;
   text-transform: uppercase;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   flex-direction: row-reverse;
   z-index: 10;
 }
