path staic content svgs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: Cooper Lt BT;
-  src: url(/fonts/CooperBoldBT.ttf);
+  src: url(/fonts/CooperLtBTBold.ttf);
   font-display: swap;
 }
 
