--- a/styles/SkewContent.module.css
+++ b/styles/SkewContent.module.css
@@ -3,8 +3,10 @@
   width: 50%;
   border: 1px solid green;
   display: flex;
+  justify-content: center;
   flex-direction: column;
-  padding: 10rem 4rem;
+  /* padding: 10rem 4rem; */
+  padding: 10rem 4rem 10rem 0rem;
 }
 .skewContent h6,
 .skewContent p {
