--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,6 +43,7 @@ a {
   border: 1px solid red;
   max-width: 1200px;
   margin: 0 auto;
+  padding-top: 8rem;
 }
 
 .path-main-btn {
@@ -54,11 +55,6 @@ a {
 }
 
 /* SKEW CONTENT */
-.skewDescription {
-  display: flex;
-  /* height: 600px; */
-}
-
 .firstSkewContent {
   position: absolute;
   width: 50%;
@@ -87,5 +83,26 @@ a {
 
 .sticky-img {
   position: sticky;
-  top: 0;
+  top: 25%;
+  z-index: 10;
+}
+
+.changed-path-img {
+  width: 35%;
+  position: absolute;
+  left: 150px;
+  bottom: 0;
+  z-index: 10;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 5px 28px -4px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 5px 28px -4px rgba(0, 0, 0, 0.1);
+}
+.skewDescription {
+  display: flex;
+  z-index: 5;
+  margin: 2rem 0rem;
+}
+
+.skewDescription:last-child {
+  margin-bottom: 0rem;
 }
